# decomp-it-up-the-prexurrection-3

./: .gitignore  AGENTS.md  CMakeLists.txt  JUDGE_SPRITES_NOTES.md  README.md  STATE_LIST.html  STATE_LIST.txt  STATE_LIST_CHEAT_ENGINE.txt  _debug_res.py
include/: bga.h  df_resource.h  pumpy.h  song.h  step.h  vsl.h  zlibinflate.h
src/: audio.c  bga.c  bga2_parser.c  df_resource.c  font.c  game_option.c  gameplay.c  gamestate.c  input.c  loading.c  logo.c  main.c  menu.c  render.c  resource.c  result.c  song.c  song_select.c  staff.c  step.c  texture.c  util.c  vsl.c  warning.c  window.c  zlibinflate.c
tools/: dump_bga2.c  dump_df.c  dump_kf.c  dump_res.c  dump_rwarn.c  stx2step.py  test_adler.py  test_adler2.py  test_adler3.py  test_huff.c  test_inflate.c  test_ref.c  test_step.c
